Fix a bug in hash map substitution